--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>    
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://drymedicrestorationservices.github.io/6-Tips-for-Using-Your-Fireplace-this-Winter/">https://drymedicrestorationservices.github.io/6-Tips-for-Using-Your-Fireplace-this-Winter/</a><br>    
+                <a target="_bLank" href="https://drymedicrestorationservices.s3.us-east-005.backblazeb2.com/6+Tips+for+Using+Your+Fireplace+this+Winter/index.html">https://drymedicrestorationservices.s3.us-east-005.backblazeb2.com/6+Tips+for+Using+Your+Fireplace+this+Winter/index.html</a><br>
+                <a target="_bLank" href="https://6-tips-for-usin-git-fc3d8a-drymedicrestorationservices-projects.vercel.app/">https://6-tips-for-usin-git-fc3d8a-drymedicrestorationservices-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://shimmering-raindrop-3f157b.netlify.app">https://shimmering-raindrop-3f157b.netlify.app</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
